[package]
name = "rsmd5"
version = "0.1.5"
authors = ["petechen <ptechen@github.com>"]
edition = "2018"
description = "Command line tool to encrypt and output md5 strings or files\n\r\t对字符串或文件md5加密并输出的命令行工具"
license-file = "license"
documentation = "https://github.com/ptechen/rsmd5/blob/master/README.md"
homepage = "https://github.com/ptechen"
repository = "https://github.com/ptechen/rsmd5.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.8"
md5 = "0.7.0"
digest = "0.8.1"
convert = "0.2.0"
failure = "0.1.6"
exitfailure = "0.5.1"
serde_json = "1.0.44"
exitcode = "1.1.2"
quicli = "0.4.0"