[package]
name = "rsmd5"
version = "0.1.9"
authors = ["ptechen <ptechen@github.com>"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/rsmd5/blob/master/README.md"
repository = "https://github.com/ptechen/rsmd5.git"
description = '''Command line tool to encrypt and output md5 strings or files
对字符串或文件md5加密并输出的命令行工具'''
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
failure = "0.1.7"
serde_json = "1.0.51"
rust-crypto = "0.2.36"
exitfailure = "0.5.1"
